Fixed issues with header styling in ie11 and tweaked the header links alignment

--- a/site/components/header/style.css
+++ b/site/components/header/style.css
@@ -14,6 +14,11 @@
   justify-content: flex-end;
 }
 
+.logo {
+  width: 140px;
+  height: 35px;
+}
+
 .logo svg {
   height: 35px;
 }
@@ -23,6 +28,7 @@
   composes: fontXS from "../../css/typography/_fonts.css";
   list-style: none;
   align-self: center;
+  margin-top: 8px;
   justify-content: flex-end;
   display: flex;
 }
@@ -170,6 +176,11 @@
     display: flex;
   }
 
+  .logo {
+    width: 178px;
+    height: 44px;
+  }
+  
   .logo svg {
     height: 44px;
   }
